# adventofcode

./: .clang-format  .clang-tidy  .gitignore  AoC.cpp  CMakeLists.txt  README.md
2016/: Day01.cpp  Day01Part2.cpp
include/: Days.h
src/: Main.cpp
src/2015/: Day01.cpp
src/2016/: Day01.cpp  Day02.cpp  Day10.cpp  Day12.cpp
src/2017/: Day01.cpp  Day02.cpp  Day03-Math.cpp  Day03.cpp  Day04.cpp  Day05.cpp  Day06.cpp  Day07.cpp  Day08.cpp  Day09.cpp  Day10.cpp  Day11.cpp  Day12.cpp
